--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
         <item>User</item>
         <item>Seller</item>
     </string-array>
+    <string name="btn_edit">Editar</string>
+    <string name="btn_delete">Eliminar</string>
 </resources>
